Add Humacs Pod status

--- a/src/cluster-api-manager/README.org
+++ b/src/cluster-api-manager/README.org
@@ -58,12 +58,12 @@ Select all resources from a deployment
 
 #+NAME: create a Kubernetes instance
 #+begin_src shell
-  curl -X POST http://localhost:8080/api/instance --data "{\"type\":\"Kubernetes\", \"facility\":\"sjc1\",\"setup\":{\"user\":\"BobyMCbobs\",\"guests\":[\"zachmandeville\"],\"repos\":[\"humacs/humacs\"]}}" | jq .
+  curl -X POST http://localhost:8080/api/instance --data "{\"type\":\"Kubernetes\", \"facility\":\"sjc1\",\"setup\":{\"user\":\"BobyMCbobs\",\"guests\":[\"zachmandeville\"],\"repos\":[\"sharingio/pair\", \"https://gitlab.com/humacs/humacs\"]}}" | jq .
 #+end_src
 
 #+NAME: delete a Kubernetes instance
 #+begin_src shell
-  curl -X DELETE http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-58bf3ee127 | jq .
+  curl -X DELETE http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-1a3866b444 | jq .
 #+end_src
 
 #+NAME: get all names of Kubernetes instances
@@ -71,15 +71,25 @@ Select all resources from a deployment
   curl -X GET http://localhost:8080/api/instance/kubernetes | jq '.list[].spec.name'
 #+end_src
 
+#+RESULTS: get all names of Kubernetes instances
+#+begin_example
+"bobymcbobs-b556f7da7a-128d9375a4"
+#+end_example
+
+#+NAME: get a Kubernetes instance
+#+begin_src shell
+  curl -X GET http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-128d9375a4 | jq .
+#+end_src
+
 #+NAME: get tmate session for Kubernetes instance
 #+begin_src shell
-  curl -X GET http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-58bf3ee127/tmate | jq .
+  curl -X GET http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-0ae9250ebe/tmate | jq .
 #+end_src
 
 #+NAME: get kubeconfig for Kubernetes instance
 #+begin_src shell
   export PATH=$PATH:/home/ii/.local/bin
-  curl -X GET http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-58bf3ee127/kubeconfig | jq .spec | yq -y .
+  curl -X GET http://localhost:8080/api/instance/kubernetes/bobymcbobs-b556f7da7a-128d9375a4/kubeconfig | jq .spec
 #+end_src
 
 #+NAME: get a list of all Kubernetes instances
