--- a/apps/client/readme.org
+++ b/apps/client/readme.org
@@ -159,7 +159,7 @@ Create an Ingress mapping
 * Build
 
 Create Java jar files out of the clojure
-#+begin_src shell :dir ../../ :results silent
+#+begin_src shell :dir :results silent
   lein uberjar
 #+end_src
 
@@ -243,7 +243,7 @@ statefulset.apps/postgres created
 Run migrations
 #+begin_src shell :dir ../../
   export $(cat .env | xargs)
-  lein run -m syme.db
+  lein run -m sharingio.db
 #+end_src
 
 #+RESULTS:
@@ -258,7 +258,7 @@ Running migration: add-shutdown-token
 Run this in a separate window, so it doesn't hold up the buffer:
 #+begin_src shell :dir ../../
   export $(cat .env | xargs)
-  java $JVM_OPTS -cp target/uberjar/syme-standalone.jar clojure.main -m syme.web
+  java $JVM_OPTS -cp target/uberjar/sharingio-standalone.jar clojure.main -m sharingio.web
 #+end_src
 
 
