--- a/org/deployment/deployment.org
+++ b/org/deployment/deployment.org
@@ -65,6 +65,7 @@ Notes:
           export SHARINGIO_PAIR_GITHUB_OAUTH_ID=<<get-github-oauth-id()>>
           export SHARINGIO_PAIR_GITHUB_OAUTH_SECRET=<<get-github-oauth-secret()>>
           export SHARINGIO_PAIR_EQUINIXMETAL_PROJECTID=<<get-equinixmetal-projectid()>>
+          export SHARINGIO_PAIR_HOST=<<get-host()>>
   helm lint \
     --set databaseURL=postgres://pair:pair@postgres.sharingio-pair/pair?sslmode=disable \
     --set sessionSecret=pairpairpairpair \
@@ -72,7 +73,7 @@ Notes:
     --set githubOAuth.secret=$SHARINGIO_PAIR_GITHUB_OAUTH_SECRET \
     --set equinixMetal.projectID=$SHARINGIO_PAIR_EQUINIXMETAL_PROJECTID \
     --set ingress.enabled=true \
-    --set ingress.hosts[0].host=pair.caleb.sharing.io \
+    --set ingress.hosts[0].host=$SHARINGIO_PAIR_HOST \
     --set ingress.hosts[0].paths[0]='/' \
     charts/sharingio-pair
 #+end_src
