--- a/org/deployment/deployment.org
+++ b/org/deployment/deployment.org
@@ -9,7 +9,6 @@ Create a namespace:
 #+end_src
 
 ** Values
-
 Set env to pass into Helm set commands
 #+begin_src elisp :results none
   (setenv "SHARINGIO_PAIR_GITHUB_OAUTH_ID" (read-from-minibuffer "SHARINGIO_PAIR_GITHUB_OAUTH_ID: "))
@@ -75,6 +74,7 @@ Notes:
     --set ingress.enabled=true \
     --set ingress.hosts[0].host=$SHARINGIO_PAIR_HOST \
     --set ingress.hosts[0].paths[0]='/' \
+    --set ingress.certmanager.enabled=true \
     charts/sharingio-pair
 #+end_src
 
@@ -93,6 +93,7 @@ Notes:
     --set ingress.enabled=true \
     --set ingress.hosts[0].host=$SHARINGIO_PAIR_HOST \
     --set ingress.hosts[0].paths[0]='/' \
+    --set ingress.certmanager.enabled=true \
     charts/sharingio-pair
 #+end_src
 
@@ -111,6 +112,7 @@ Notes:
     --set ingress.enabled=true \
     --set ingress.hosts[0].host=$SHARINGIO_PAIR_HOST \
     --set ingress.hosts[0].paths[0]='/' \
+    --set ingress.certmanager.enabled=true \
     charts/sharingio-pair
 #+end_src
 
